# rust-web-boilerplate

./: .env.example  .gitignore  .travis-ci.yml  .travis.yml  Cargo.toml  LICENSE  README.md  Rocket.toml  diesel.toml  local_env.sh  reset.sh  watch.sh
migrations/20170211131857_create_initial_db/: up.sql
src/: config.rs  database.rs  handlers.rs  lib.rs  main.rs  responses.rs  schema.rs
src/api/: auth.rs  hello.rs  mod.rs
src/helpers/: db.rs  mod.rs  util.rs
src/models/: user.rs
src/tests/: factories.rs  mod.rs  test_api_auth.rs
src/validation/: user.rs
tests/: factories.rs  lib.rs  test_api_auth.rs  test_api_hello.rs  utils.rs
tests/common/: mod.rs
tests/factories/: mod.rs
