[package]
name = "rust-web-boilerplate"
version = "0.1.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]

[lib]
name = "rust_web_boilerplate"
path = "src/lib.rs"

[[bin]]
name = "rust_web_boilerplate_runner"
path = "src/main.rs"

[dependencies]
uuid = { version = "0.6", features = ["use_std", "serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2rs = "0.2"
rocket = { version = "0.3" }
rocket_codegen = { version = "0.3" }
diesel = { version = "1.2", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel_codegen = { version = "0.16", features = ["postgres"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"
dotenv = "0.13"
serde = "1"
serde_json = "1"
serde_derive = "1"
validator = "0.7"
validator_derive = "0.7"
ring = "0.11"
rand = "0.5"

[dev-dependencies]
quickcheck = "0.6"
speculate = "0.0.26"
parking_lot = { version = "0.6", features = ["nightly"] }

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["json"]

[features]
default = []
